# Oscillite

./: CMakeLists.txt  README.md
include/: adsr.h  func_g.h  oscillator.h  q8_8.h
src/: adsr.cpp  func_g.cpp  main.cpp  q8_8.cpp
tests/: test_oscillator.cpp  test_q8_8.cpp
